--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,26 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
-description = "Quickhull algorithm for computing convex hulls."
+description = "Quickhull algorithm for computing convex hulls"
 readme = "README.md"
 keywords = ["convex", "hull", "geo", "geometry"]
 categories = ["algorithms", "mathematics", "game-development"]
 
 [dependencies]
-glam = "0.27"
+glam = "0.30"
 robust = "1.1.0"
 
 [dev-dependencies]
-bevy = "0.14"
-rand = "0.8.5"
+bevy = "0.17"
+rand = "0.9"
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.bench]
 debug = true
