--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,13 @@ keywords = ["convex", "hull", "geo", "geometry"]
 categories = ["algorithms", "mathematics", "game-development"]
 
 [dependencies]
+# Math
 glam = "0.30"
 robust = "1.1.0"
+
+# Hashing
+foldhash = "0.2"
+hashbrown = "0.16"
 
 [dev-dependencies]
 bevy = "0.17"
