--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["algorithms", "mathematics", "game-development"]
 [dependencies]
 # Math
 glam = "0.30"
-glam_matrix_extras = "0.1"
+glam_matrix_extras = { git = "https://github.com/Jondolf/glam_matrix_extensions" }
 robust = "1.1.0"
 approx = "0.5"
 
