Rework 3D quickhull and use `f32` vector types (#5)
# Objective

Our current 3D quickhull implementation is very slow due to the use of `robust` and a *lot* of allocations and general inefficiencies. This is a big problem for many use cases such as my [CoACD-rs](https://github.com/Jondolf/CoACD-rs) library, which computes a *lot* of convex hulls.

Additionally, our current approach doesn't handle degenerate cases very gracefully; instead of still trying to compute a hull, it simply returns an error. Sometimes, it can be desired to still get a degenerate but well-formed hull, for example you should be able to pass in points that form a flat plane or triangle and get back a flat but two-sided mesh.

We need to rework things quite a bit!

## Solution

Overhaul the 3D quickhull implementation, largely using [Parry's implementation](https://github.com/dimforge/parry/blob/9db68641adf69e1f307ac9199d34d82b6d049219/src/transformation/convex_hull3/convex_hull.rs) as reference. It is more than *an order of magnitude* faster: computing the convex hull of the Utah teapot now takes 240.6 *microseconds*, down from 3.36 *milliseconds* before. This matches Parry's performance. Sweet!

My implementation does have some implementation differences, is more heavily commented, and is cleaned up a bit more (ex: newtypes and clearer names for point and face IDs, face links, etc.). Additionally, I handle inputs with fewer than 4 points instead of just returning an error. For Eigen decompositions (to compute the dimensionality of the point set), I use [`glam_matrix_extras`](https://github.com/Jondolf/glam_matrix_extras).

Additionally, I switched to using `Vec2` and `Vec3A` instead of the double-precision variants. Efficiency is important here, and single-precision values fit in better with some of my other work. Results still seem quite robust and accurate from what I've tested.

I also updated lots of APIs and docs and generally cleaned things up. A lot of changes here!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ categories = ["algorithms", "mathematics", "game-development"]
 [dependencies]
 # Math
 glam = "0.30"
+glam_matrix_extras = { git = "https://github.com/Jondolf/glam_matrix_extras", rev = "bc247a4" }
 robust = "1.1.0"
+approx = "0.5"
+thiserror = "2.0"
 
 # Hashing
 foldhash = "0.2"
